# polars_ols

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  config.toml  pyproject.toml  requirements.txt
.cargo/: config.toml
.github/workflows/: CI.yml  publish_to_pypi.yml
notebooks/: polars_ols_demo.ipynb
polars_ols/: __init__.py  least_squares.py  utils.py
src/: expressions.rs  least_squares.rs  lib.rs  statistics.rs
tests/: benchmark.py  requirements-test.txt  test_ols.py
