[package]
name = "polars_ols"
version = "0.2.9"
edition = "2021"

[lib]
name = "polars_ols"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "*", features = ["extension-module", "abi3-py38"] }  # set > py38 supported version
pyo3-polars = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
polars = { version = "*", features = ["performant", "lazy", "ndarray", "dtype-struct"]}
ndarray-rand = {version = "*"}
faer = {version = "*"}
faer-ext = {version = "*", features = ["ndarray"]}
num-traits = { version = "*" }
approx = {version = "*" }
ndarray = { version = "*", features = ["matrixmultiply-threading"]}  # i.e. windows / linux arm etc.

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[target.'cfg(all(target_os = "linux", any(target_arch = "x86_64", target_arch = "x64")))'.dependencies]
blas-src = {version = "*", features = ["intel-mkl"]}
ndarray = { version = "*", features = ["blas"]}
ndarray-linalg = {version = "*", features = ["intel-mkl"]}

[target.'cfg(target_os = "macos")'.dependencies]
ndarray = { version = "*", features = ["blas"]}
ndarray-linalg = { version = "*" }

[dev-dependencies]
ndarray-linalg = {version = "*"}

[profile.dev.package.faer]
opt-level = 3
