cargo-features = ["profile-rustflags"]

[package]
name = "polars_ols"
version = "0.3.3"
edition = "2021"

[lib]
name = "polars_ols"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "*", features = ["extension-module", "abi3-py38", "gil-refs"] }  # set > py38 supported version
pyo3-polars = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
polars = { version = "*", features = ["performant", "lazy", "ndarray", "dtype-struct", "nightly"] }
ndarray-rand = { version = "*" }
num-traits = { version = "*" }
approx = { version = "*" }
ndarray = { version = "*", features = ["matrixmultiply-threading"] }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[target.'cfg(all(target_os = "linux", any(target_arch = "x86_64", target_arch = "x64")))'.dependencies]
ndarray = { version = "*", features = ["blas"] }
blas-src = { version = "*", features = ["intel-mkl"]}
lapack-src = {version = "*", features = ["intel-mkl"]}
ndarray-linalg = {version = "*", features = ["intel-mkl"]}

[target.'cfg(target_os = "macos")'.dependencies]
ndarray = { version = "*", features = ["blas"] }
blas-src = { version = "*", features = ["accelerate"] }
lapack-src = { version = "*", features = ["accelerate"] }
ndarray-linalg = {version = "*"}

[target.'cfg(target_arch = "arm")'.dependencies]
faer = { version = "*" }  # don't allow nightly for ARM due to issues with NEON support
faer-ext = { version = "*", features = ["ndarray"] }

[target.'cfg(not(target_arch = "arm"))'.dependencies]
pulp = { version = "0.18.10", features = ["nightly"] }
faer = { version = "*", features = ["std", "rayon", "serde", "rand", "npy", "nightly"] }
faer-ext = { version = "*", features = ["ndarray"] }

[dev-dependencies]
ndarray-linalg = { version = "*" }

[profile.dev.package.faer]
opt-level = 3
